[tool.poetry]
name = "jasmin-jupyterhub-authenticator"
version = "0.1.0"
description = ""
authors = ["STFC JASMIN Developers <support@jasmin.ac.uk>"]
maintainers = ["Alexander Manning <alexander.manning@stfc.ac.uk>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "jasmin_authenticator"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterhub = ">=3.1.1"
oauthenticator = "^15.1.0"
jasmin-ldap = {git = "https://github.com/cedadev/jasmin-ldap.git", rev = "25550e8c71abba9be2028e5df86015ac11455671"}
traitlets = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
